@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.173 2007-10-31 16:32:04 cmatsuoka Exp $
+$Id: ChangeLog,v 1.174 2007-11-01 10:48:39 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -7,6 +7,7 @@ Stable versions
 	- remove DMP-specific effect from MOD loader
 	- extend Protracker-style loops to Noisetracker and Startrekker
 	- FLT loader recognizes Startrekker FLTM modules (only PCM channels)
+	- implemented support for Startrekker AM synth instruments
 
 2.4.1 (20071029):
 	- fixed portamento after keyoff problem in metamorph_part_ii.xm
